feat: responsive hero + content + favicon

--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "husky": "^9.1.7",
     "prettier": "3.5.3",
     "typescript-eslint": "^8.34.1"
+  },
+  "dependencies": {
+    "normalize.css": "^8.0.1"
   }
 }
